# GridPPDIRAC

./: .travis.yml  README  __init__.py  pytest.ini  requirements.txt  setup.cfg
ConfigurationSystem/: ConfigTemplate.cfg
ConfigurationSystem/Agent/: AutoBdii2CSAgent.py  AutoUsersAndGroups.py  AutoVac2CSAgent.py  UsersAndGroupsAPI.py  UsersAndGroupsAgent.py
ConfigurationSystem/private/: AddResourceAPI.py  AutoBDIISEs.py  UsersAndGroupsAPI.py
ConfigurationSystem/private/AutoResourceTools/: CETypes.py  ConfigurationSystem.py  Glue2ARCAPI.py  Glue2HTCondorAPI.py  SETypes.py  ldaptools.py  utils.py
Core/DISET/: HTTPDISETConnection.py
Core/Security/: HTTPSClientUtils.py  MultiVOMSService.py
Core/Utilities/: SOAPFactory.py
Executor/: __init__.py
FrameworkSystem/: ConfigTemplate.cfg
FrameworkSystem/Agent/: HelloWorldAgent.py  HelloWorldAgent_test.py
WorkloadManagementSystem/Agent/: MultiProcessorSiteDirector.py  SiteDirector.py  SiteDirector.pyo  __init__.pyo
WorkloadManagementSystem/Executor/: JobPlatform.py
WorkloadManagementSystem/PilotAgent/: GridPPCommands.py  pilotTools.py
WorkloadManagementSystem/Service/: MatcherHandler.py
src/GridPPDIRAC/: __init__.py
src/GridPPDIRAC/ConfigurationSystem/Agent/: AutoBdii2CSAgent.py  AutoVac2CSAgent.py
src/GridPPDIRAC/ConfigurationSystem/private/: AddResourceAPI.py  AutoBDIISEs.py  UsersAndGroupsAPI.py
src/GridPPDIRAC/Core/Security/: HTTPSClientUtils.py  MultiVOMSService.py
src/GridPPDIRAC/FrameworkSystem/Agent/: HelloWorldAgent_test.py
src/GridPPDIRAC/WorkloadManagementSystem/Executor/: JobPlatform.py
(+9 files in other folders)
