[metadata]
name = GridPPDIRAC
description = "GridPP multi-VO additions for DIRAC"
url = https://github.com/ic-hep/GridPPDIRAC/
license = GPL-3.0-only

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* = ConfigTemplate.cfg, *.sql

[options.packages.find]
where=src

[options.entry_points]
dirac =
    metadata = GridPPDIRAC:extension_metadata
